Fix breakpoint of wrap height:100%

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -28,7 +28,7 @@ html, body {
 .archive, .home {
     .wrap {
         width: 100%;
-        @include media-breakpoint-up(lg) {
+        @include media-breakpoint-up(md) {
             height: 100%;
         }
     }
